...
        <FormArea>
          <LogoImage src="/images/Logo.png" alt="Salmon" />
          <Title>{t('wallet.create.messageTitle')}</Title>
          <BodyText>{t('wallet.create.messageBody')}</BodyText>
        </FormArea>
        <ButtonContainer>
          <PrimaryButton onClick={onNext} testID="create-start-button">
            {(t('actions.start') || 'START').toUpperCase()}
          </PrimaryButton>
        </ButtonContainer>
      </Content>
    </Container>
  );
...
