...
        <LogoImage src="/images/Logo.png" alt="Salmon" />
        <Title>{t('wallet.create.success_message')}</Title>
        <Subtitle>{t('wallet.create.success_message_body')}</Subtitle>
      </CenterContent>

      <ButtonsContainer>
        <PrimaryButton onClick={onGoToWallet} testID="success-go-to-wallet-button">
          {t('wallet.create.go_to_my_wallet')}
        </PrimaryButton>
        <SecondaryButton onClick={onCheckDerived} testID="success-check-derived-button">
          {t('wallet.create.check_derivables')}
        </SecondaryButton>
        <Box sx={{ display: 'flex', justifyContent: 'center' }}>
...
